--- a/frontend/src/components/PerritoVisto/PerritoVistoForm.css
+++ b/frontend/src/components/PerritoVisto/PerritoVistoForm.css
@@ -324,19 +324,26 @@ textarea:focus,
 @media screen and (min-width: 320px) and (max-width: 435px) {
   .perrito-visto-form-container {
     padding: 1.5rem;
+    /* justify-content: flex-start;
+    align-items: flex-start; */
   }
 
   .perrito-visto-form-container h2 {
     font-size: 1.2rem;
     text-align: center;
+    /* justify-content: flex-start; */
+    margin-bottom: 2rem;
+    margin-top: 2rem;
   }
 
   .contenedor-perro-visto {
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     justify-content: flex-start;
-    padding: 1rem;
+    width: 95%;
+    align-items: flex-start; 
   }
+
 
   .container-img-nom {
     flex-direction: column;
@@ -344,52 +351,79 @@ textarea:focus,
 
   .container-img {
     flex-direction: column;
-    align-items: center;
+
   }
 
-  .image-visto-preview {
+  /* .image-visto-preview {
     max-width: 8rem;
     max-height: 6rem;
-  }
+  } */
 
   .subir-imagen div {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+    align-items: flex-start; 
+    justify-content: flex-start;
   }
 
-  .container-texta-fecha-dir {
-    flex-direction: column;
-    padding: 0 1rem;
+  .container-dir-fecha{
+    justify-content: flex-start; /* Alinear horizontalmente a la izquierda */
+    align-items: flex-start; 
+    width: 350px;
+  }
+  
+  .container-textarea{
+    max-width: max-content;
+    margin-left: -118px;
+    width: 200%; /* Ocupa casi todo el ancho disponible */
+    max-width: 900px; /* Ancho máximo */
+    margin-top: 15px;
+  }
+ 
+  .container-texta-fecha-dir{
+    justify-content: flex-start; /* Alinear horizontalmente a la izquierda */
+    align-items: flex-start; 
+    margin-left: -40px;
+
   }
 
-  .container-dir-fecha input,
-  .container-textarea textarea {
-    width: 90%;
-    font-size: 0.9rem;
-  }
+  .container-textarea textarea, 
+.container-dir-fecha input {
+    width: 100%; 
+    max-width: 350px; 
+    gap: 1rem;
+}
 
   .container-genero-raza-color {
     flex-direction: column;
     gap: 1rem;
     padding: 1rem 0;
+    /* font-size: small; */
+    width: auto; /* O ajusta a un valor mayor */
+    max-width: none;
   }
 
   .container-genero-raza-color select {
-    width: 90%;
-    font-size: 0.9rem;
+    
+    font-size: 0.8rem;
+    flex-shrink: 0;
+    flex-basis: auto;
+    width: 108% !important;
   }
 
   .datos-adicionales {
     margin-left: 0;
-    text-align: center;
+    text-align: left;
     font-size: 0.9rem;
   }
 
   .start-button {
-    margin-top: 1rem;
-    width: 90%;
+    margin-top: 2rem;
+    width: 100%;
     padding: 0.7rem;
     font-size: 0.9rem;
     border-radius: 8px;
+    margin-bottom: 2rem;
+    margin-left: 10px;
   }
 
   .loading-messages {
@@ -400,6 +434,7 @@ textarea:focus,
     display: none !important;
   }
 }
+
 
 /* Estilos responsivos para pantallas grandes entre 768px y 1044px */
 @media screen and (min-width: 768px) and (max-width: 1044px) {
@@ -450,16 +485,6 @@ textarea:focus,
     font-size: 1rem;
   }
 
-  /* .container-genero-raza-color {
-    flex-direction: column;
-    gap: 1.2rem;
-    padding: 1.5rem 0;
-  }
-
-  .container-genero-raza-color select {
-    width: 90%;
-    font-size: 1rem;
-  } */
 
   .datos-adicionales {
     margin-left: 0;
@@ -486,70 +511,6 @@ textarea:focus,
 
 
  @media screen and (max-width: 2560px) {
-  /* .perrito-visto-form-container {
-    padding: 3rem;
-  }
-
-  .perrito-visto-form-container h2 {
-    font-size: 2rem;
-    text-align: center;
-  }
-
-  .contenedor-perro-visto {
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 2rem;
-  } 
-
-   .container-img-nom {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  } 
-
-  .container-img {
-    flex-direction: column;
-    align-items: center;
-  } 
-
-   .image-visto-preview {
-    max-width: 16rem; 
-    max-height: 12rem; 
-  }
-
-  .subir-imagen div {
-    font-size: 1.2rem;
-  }
-
-  .container-texta-fecha-dir {
-    flex-direction: column;
-    padding: 0 2rem;
-  }
-
-  .container-dir-fecha input,
-  .container-textarea textarea {
-    width: 85%;
-    font-size: 1.1rem;
-  }
-
-  .datos-adicionales {
-    margin-left: 0;
-    text-align: center;
-    font-size: 1.1rem;
-  }
-
-  .start-button {
-    margin-top: 2rem;
-    width: 85%;
-    padding: 1.2rem;
-    font-size: 1.1rem;
-    border-radius: 8px;
-  }
-
-  .loading-messages {
-    font-size: 1.2rem;
-  }  */
 
   .container-texta-fecha-dir {
     flex-direction: column;
@@ -575,9 +536,9 @@ textarea:focus,
   }
   .img-visto {
     display: flex;
-    height: 1030px;
-    max-width: 25rem;  
-    margin-top: 3rem;
+    /* height: 1030px; */
+    max-width: 30rem;  
+    /* margin-top: 3rem; */
     margin-left: auto;
     margin-right: auto;
   }
