--- a/frontend/src/components/User/User.css
+++ b/frontend/src/components/User/User.css
@@ -14,12 +14,13 @@
   }
   
   .user-form input {
-    width: 100%; /* Asegura que todos los campos sean del mismo ancho */
-    box-sizing: border-box; /* Incluye el padding y borde dentro del ancho */
+    width: 100%; 
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
+    box-sizing: border-box; 
+    margin: 0; 
   }
   
   /* button {
@@ -101,7 +102,7 @@
   
 /*para la contraseña*/
   .user-form input[type="password"] {
-    margin: 10px 0;
+    margin: 0;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
