--- a/frontend/src/components/Contacto/Contacto.css
+++ b/frontend/src/components/Contacto/Contacto.css
@@ -18,7 +18,7 @@
 .faq-section {
   margin-top: 30px;
   padding: 15px;
-  border-left: 4px solid #007BFF;
+  border-left: 4px solid rgb(76, 175, 80);
   background-color: #f0f0f0;
   border-radius: 8px;
   font-size: 1em;
